--- a/Riskvalve/Views/Assessment/PrintAssessment.cshtml
+++ b/Riskvalve/Views/Assessment/PrintAssessment.cshtml
@@ -190,7 +190,7 @@
                 <td class="text-center" style="background-color: @assessmentHeatMap["TP1"]["color"];">@assessmentHeatMap["TP1"]["value"]</td>
                 <td class="text-center" style="background-color: @assessmentHeatMap["TP2"]["color"];">@assessmentHeatMap["TP2"]["value"]</td>
                 <td class="text-center" style="background-color: @assessmentHeatMap["TP3"]["color"];">@assessmentHeatMap["TP3"]["value"]</td>
-                <td class="nowrap">@assessment.AssessmentDate</td>
+                <td class="text-center">@assessment.TPTimeToActionRisk</td>
                 <td></td>
                 <td colspan="5">Spare</td>
                 <td colspan="1" class="checkbox">
